--- a/index.html
+++ b/index.html
@@ -50,39 +50,31 @@
   </div>
   <div id="unity-warning">Your browser does not support WebGL</div>
 
- <script>
-  var buildUrl = "Build";
-  var loaderUrl = buildUrl + "/Quantum.loader.js";
+  <script>
+    var buildUrl = "Build";
+    var loaderUrl = buildUrl + "/Quantum.loader.js";
     var config = {
-    dataUrl: buildUrl + "/Quantum.data.unityweb",
-    frameworkUrl: buildUrl + "/Quantum.framework.js.unityweb",
-    codeUrl: buildUrl + "/Quantum.wasm.unityweb",
-    streamingAssetsUrl: "StreamingAssets",
-    companyName: "DefaultCompany",
-    productName: "Quantum",
-    productVersion: "1.0"
-  };
+      dataUrl: buildUrl + "/Quantum.data.br",
+      frameworkUrl: buildUrl + "/Quantum.framework.js.br",
+      codeUrl: buildUrl + "/Quantum.wasm.br",
+      streamingAssetsUrl: "StreamingAssets",
+      companyName: "DefaultCompany",
+      productName: "Quantum",
+      productVersion: "1.0"
+    };
 
+    var container = document.querySelector("#unity-container");
+    var canvas = document.querySelector("#unity-canvas");
+    var warningBanner = document.querySelector("#unity-warning");
 
-  var container = document.querySelector("#unity-container");
-  var canvas = document.querySelector("#unity-canvas");
-  var warningBanner = document.querySelector("#unity-warning");
-
-  // ✅ Dynamically load the loader script
-  var script = document.createElement("script");
-  script.src = loaderUrl;
-  script.onload = () => {
     createUnityInstance(canvas, config, (progress) => {
-      // Optionally show progress bar
+      // Optionally show loading bar here
     }).then((unityInstance) => {
       window.unityInstance = unityInstance;
     }).catch((message) => {
       warningBanner.style.display = "block";
       warningBanner.textContent = message;
     });
-  };
-  document.body.appendChild(script);
-</script>
-
+  </script>
 </body>
 </html>
