--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
     }
 
     canvas#unity-canvas {
-      width: 100%;
-      height: auto;
-      max-width: 100vw;
+      height: 100vh;
+      width: auto;
+      max-height: 100vh;
       aspect-ratio: 9 / 16;
       background: #000;
       box-shadow: 0 0 16px rgba(0,0,0,0.25);
