--- a/index.html
+++ b/index.html
@@ -31,13 +31,15 @@
     }
 
     canvas#unity-canvas {
-      height: 100vh;
-      width: auto;
-      max-height: 100vh;
-      aspect-ratio: 9 / 16;
-      background: #000;
-      box-shadow: 0 0 16px rgba(0,0,0,0.25);
-    }
+        height: 95vh;         /* Instead of 100vh */
+        width: auto;
+        max-height: 95vh;
+        aspect-ratio: 9 / 16;
+        background: #000;
+        box-shadow: 0 0 16px rgba(0,0,0,0.25);
+        margin: 2.5vh 0;      /* Center vertically with spacing */
+}
+
 
     #unity-loading-bar {
       position: absolute;
