--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
   <title>Quantum | WebGL</title>
-  <link rel="shortcut icon" href="TemplateData/favicon.ico">
-  <link rel="stylesheet" href="TemplateData/style.css">
+
   <style>
     html, body {
       margin: 0;
@@ -86,9 +85,9 @@
       var div = document.createElement('div');
       div.innerHTML = msg;
       warningBanner.appendChild(div);
-      if (type == 'error') div.style = 'background: red; padding: 10px;';
+      if (type === 'error') div.style = 'background: red; padding: 10px;';
       else {
-        if (type == 'warning') div.style = 'background: yellow; padding: 10px;';
+        if (type === 'warning') div.style = 'background: yellow; padding: 10px;';
         setTimeout(() => {
           warningBanner.removeChild(div);
           updateBannerVisibility();
@@ -98,12 +97,11 @@
     }
 
     var buildUrl = "Build";
-    var loaderUrl = buildUrl + "/7a2dbded24d57e056180125b1583e7c4.loader.js"; // <-- Dynamic filename
-
+    var loaderUrl = buildUrl + "/Quantum.loader.js";
     var config = {
-      dataUrl: buildUrl + "/40f932aedcd8cd19a26f0396331477d1.data.br",
-      frameworkUrl: buildUrl + "/9a68b798162779761b7891fe71cc27aa.framework.js.br",
-      codeUrl: buildUrl + "/8ceff48ed6797c6e0dd7b7208895b7df.wasm.br",
+      dataUrl: buildUrl + "/Quantum.data.br",
+      frameworkUrl: buildUrl + "/Quantum.framework.js.br",
+      codeUrl: buildUrl + "/Quantum.wasm.br",
       streamingAssetsUrl: "StreamingAssets",
       companyName: "DefaultCompany",
       productName: "Quantum",
@@ -127,7 +125,6 @@
         alert(message);
       });
     };
-
     document.body.appendChild(script);
   </script>
 </body>
