--- a/index.html
+++ b/index.html
@@ -69,18 +69,18 @@
   </div>
 
   <script>
-    var container = document.querySelector("#unity-container");
-    var canvas = document.querySelector("#unity-canvas");
-    var loadingBar = document.querySelector("#unity-loading-bar");
-    var progressBarFull = document.querySelector("#unity-progress-bar-full");
-    var fullscreenButton = document.querySelector("#unity-fullscreen-button");
-    var warningBanner = document.querySelector("#unity-warning");
+    const container = document.querySelector("#unity-container");
+    const canvas = document.querySelector("#unity-canvas");
+    const loadingBar = document.querySelector("#unity-loading-bar");
+    const progressBarFull = document.querySelector("#unity-progress-bar-full");
+    const fullscreenButton = document.querySelector("#unity-fullscreen-button");
+    const warningBanner = document.querySelector("#unity-warning");
 
     function unityShowBanner(msg, type) {
       function updateBannerVisibility() {
         warningBanner.style.display = warningBanner.children.length ? 'block' : 'none';
       }
-      var div = document.createElement('div');
+      const div = document.createElement('div');
       div.innerHTML = msg;
       warningBanner.appendChild(div);
       if (type === 'error') div.style = 'background: red; padding: 10px;';
@@ -94,9 +94,9 @@
       updateBannerVisibility();
     }
 
-    var buildUrl = "Build";
-    var loaderUrl = buildUrl + "/Quantum.loader.js";
-    var config = {
+    const buildUrl = "Build";
+    const loaderUrl = buildUrl + "/Quantum.loader.js"; // Loader remains uncompressed!
+    const config = {
       dataUrl: buildUrl + "/Quantum.data.br",
       frameworkUrl: buildUrl + "/Quantum.framework.js.br",
       codeUrl: buildUrl + "/Quantum.wasm.br",
@@ -109,7 +109,7 @@
 
     loadingBar.style.display = "block";
 
-    var script = document.createElement("script");
+    const script = document.createElement("script");
     script.src = loaderUrl;
     script.onload = () => {
       createUnityInstance(canvas, config, (progress) => {
@@ -123,7 +123,6 @@
         alert(message);
       });
     };
-
     document.body.appendChild(script);
   </script>
 </body>
