--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
     }
 
     const buildUrl = "Build";
-    const loaderUrl = buildUrl + "/Quantum.loader.js"; // Let Unity inject the correct name
+    const loaderUrl = buildUrl + "/Quantum.loader.js";
 
     const config = {
       dataUrl: buildUrl + "/Quantum.data.br",
