--- a/index.html
+++ b/index.html
@@ -52,23 +52,15 @@
     input#mobileInputOverlay {
       position: absolute;
       top: -100px;
-      left: 50%;
-      transform: translateX(-50%);
-      opacity: 1;
-      z-index: 9999;
-      font-size: 20px;
-      padding: 8px 12px;
-      border-radius: 8px;
-      border: 1px solid #aaa;
-      width: 200px;
-      text-align: center;
+      opacity: 0;
+      pointer-events: none;
     }
   </style>
 </head>
 
 <body>
   <div id="unity-container">
-    <canvas id="unity-canvas"></canvas>
+    <canvas id="unity-canvas" tabindex="-1"></canvas>
     <div id="unity-loading-bar">
       <div id="unity-logo"></div>
       <div id="unity-progress-bar-empty">
@@ -83,14 +75,7 @@
     </div>
   </div>
 
-  <!-- HTML overlay input used for mobile -->
-  <input id="mobileInputOverlay"
-         type="number"
-         inputmode="numeric"
-         pattern="[0-9]*"
-         placeholder="Enter number..."
-         oninput="sendToUnity(this.value)"
-         onblur="hideMobileKeyboard()" />
+  <input id="mobileInputOverlay" type="number" inputmode="numeric" pattern="[0-9]*" oninput="sendToUnity(this.value)" />
 
   <script>
     if ('serviceWorker' in navigator) {
@@ -128,18 +113,16 @@
       updateBannerVisibility();
     }
 
-    function showMobileKeyboard(currentValue = "") {
+    function showMobileKeyboard(currentValue) {
       const input = document.getElementById("mobileInputOverlay");
-      input.value = currentValue;
+      input.value = currentValue || "";
       input.style.top = "50%";
       input.focus();
       input.setSelectionRange(input.value.length, input.value.length);
     }
 
-    function hideMobileKeyboard() {
-      const input = document.getElementById("mobileInputOverlay");
-      input.style.top = "-100px";
-    }
+    // ✅ Make showMobileKeyboard callable from Unity
+    window.showMobileKeyboard = showMobileKeyboard;
 
     function sendToUnity(value) {
       if (unityInstance) {
